2005-03-19  Matthias Wimmer  <m@tthias.net>

    * configure.in: find openssl without pkg-config using --with-ssl-legacy
    * dialback/dialback.c: send stream error on idle stream
    * dialback/dialback_out.c: disable xmpp/starttls for configured hosts
    * jsm/modules/mod_roster.c: threading problem, we removed the roster
    	item before the subscription was removed

2005-03-15  Matthias Wimmer  <m@tthias.net>

    * jabberd/base/base_unsubscribe.c: new base handler
    * jabberd/lib/jabberdlib.h: optional: store presence in xdb
    * jsm/modules/mod_presence.c: same
    * jsm/modules/mod_xml.c: same

2005-03-13  Matthias Wimmer  <m@tthias.net>

    * jabber.xml.dist.in: removed mod_filter from the default configuration
    * jabberd/config.c: remove 'included' configuration, we did not use it
    * jabberd/jabberd.c: same
    * jabberd/single.h: same (file removed)
    * xdb_sql/xdb_sql.c: fix for constructing queries for non-existant values

2005-03-11  Matthias Wimmer  <m@tthias.net>

    * jsm/modules/mod_auth_plain.c: log new account registrations

2005-03-10  Matthias Wimmer  <m@tthias.net>

    * jabberd/base/base_accept.c: we can now generate longer error messages
    * dialback/dialback_out.c: improved error messages

2005-03-09  Matthias Wimmer  <m@tthias.net>

    * jabberd/mio.c: send mio signal only if no signal already pending
    * xdb_sql/xdb_sql.c: fixed problem when compiling on old compilers

2005-03-05  Matthias Wimmer  <m@tthias.net>

    * jabber.xml.dist.in: added example for a write-only admin
    * jsm/jsm.c: disabled jsm_shutdown() as it crashes on existing sessions
    * jsm/modules/mod_announce.c: added write-only admins
    * jsm/modules/mod_register.c: same
    * jsm/util.c: same

2005-03-04  Matthias Wimmer  <m@tthias.net>

    * jabberd/jabberd.h: better dialback error logging
    * jabberd/mio.c: same
    * jabberd/lib/xstream.c: same
    * jabberd/lib/jabberdlib.h: same
    * jabberd/deliver.c: same